@@ -317,6 +317,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA iP5000 (EXPERIMENTAL)
        Canon PIXMA iP4100 (EXPERIMENTAL)
        Canon PIXMA i80    (EXPERIMENTAL)
+       Canon PIXMA i850   (EXPERIMENTAL)
 
 * Changes from 5.2.6
 
